--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -97,7 +97,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          docker build -t acrforakscluster.azurecr.io/webapp:$(tag) app-dotnet
+          docker build -t devavaxiaregistry.azurecr.io/webapp:$(tag) app-dotnet
 
     - task: Bash@3
       displayName: Scan Container
@@ -105,7 +105,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy --exit-code 0 --severity MEDIUM,HIGH,CRITICAL --ignore-unfixed acrforakscluster.azurecr.io/webapp:$(tag)
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy --exit-code 0 --severity MEDIUM,HIGH,CRITICAL --ignore-unfixed devavaxiaregistry.azurecr.io/webapp:$(tag)
 
     - task: AzureCLI@2
       displayName: Push Container to ACR
