--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -294,7 +294,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Deploy Helm Chart'
       inputs:
-        azureSubscription: 'aks-spn-ca'
+        azureSubscription: 'Avaxia-DevOps'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         workingDirectory: '$(System.ArtifactsDirectory)/drop/helm_chart'
@@ -322,7 +322,7 @@ stages:
       displayName: 'Scan Cluster Config'
       # enabled: ${{ parameters.runCompletePipeline}}
       inputs:
-        azureSubscription: 'aks-spn-ca'
+        azureSubscription: 'Avaxia-DevOps'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
