Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -269,7 +269,7 @@ stages:
       timeoutInMinutes: 1 # 1440 # task times out in 1 day
       enabled: ${{ parameters.runCompletePipeline}}
       inputs:
-        notifyUsers: 'someone@example.com'
+        notifyUsers: 'abdelhak.amami@avaxia-group.com'
         instructions: |
           Please validate the build configuration and resume
           Tag: $(tag)
