--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -174,6 +174,14 @@ stages:
       vmImage: 'ubuntu-latest'
 
     steps:
+    - task: AzureCLI@2
+      displayName: aks non-admin login using kubelogin
+      inputs:
+           azureSubscription: 'Avaxia-DevOps'
+           scriptType: batch
+           scriptLocation: inlineScript
+           inlineScript: |
+                az aks get-credentials -n dev-aks -g Avaxia-DevOps & kubelogin convert-kubeconfig -l   azurecli & Kubectl get nodes
 
     - task: DownloadBuildArtifacts@1
       displayName: Download Artifacts
