Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -177,7 +177,7 @@ stages:
     - task: AzureCLI@2
       displayName: azcli login and save creds
       inputs:
-        azureSubscription: 'myakstestsp'
+        azureSubscription: 'Avaxia-DevOps'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
