Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -174,28 +174,7 @@ stages:
       vmImage: 'ubuntu-latest'
 
     steps:
-    - task: AzureCLI@2
-      displayName: azcli login and save creds
-      inputs:
-        azureSubscription: 'Avaxia-DevOps'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          #Unfortunately azurecli task does a logout at the end, so we need to grab creds and then login from bash
-          echo "export servicePrincipalId=$servicePrincipalId" >.env
-          echo "export servicePrincipalKey=$servicePrincipalKey" >>.env
-          echo "export tenantId=$tenantId" >>.env
-        addSpnToEnvironment: true
-
-    - bash: |
-        source .env
-        az login --service-principal -u $servicePrincipalId -p $servicePrincipalKey -t $tenantId
-        mkdir -p .bin
-        az aks install-cli --install-location .bin/kubectl  # install kubelogin
-        az aks get-credentials -n $(kubernetesCluster) -g $(azureResourceGroup)
-        kubelogin convert-kubeconfig -l azurecli 
-        kubectl get all -A
-    
+   
     - task: DownloadBuildArtifacts@1
       displayName: Download Artifacts
       inputs:
@@ -207,10 +186,8 @@ stages:
     - task: Kubernetes@1
       displayName: Deploy YAML Manifest
       inputs:
-        connectionType: 'Azure Resource Manager'
-        azureSubscriptionEndpoint: 'Avaxia-DevOps'
-        azureResourceGroup: 'Avaxia-DevOps'
-        kubernetesCluster: 'dev-aks'
+        connectionType: 'Kubernetes Service Connection'
+        kubernetesServiceEndpoint: 'dev-aks'
         namespace: 'abdelhak'
         command: 'apply'
         useConfigurationFile: true
