--- a/02_kubernetes_aks/disk-pvc.yaml
+++ b/02_kubernetes_aks/disk-pvc.yaml
@@ -1,18 +1,10 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: azure-disk
-provisioner: kubernetes.io/azure-disk
-parameters:
-  storageaccounttype: Standard_LRS
-  kind: Managed
----
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mssql-pvc
   annotations: 
-    volume.beta.kubernetes.io/storage-class: azure-disk
+    volume.beta.kubernetes.io/storage-class: default
 spec:
   storageClassName: default
   accessModes:
