Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -232,7 +232,7 @@ stages:
         connectionType: 'Kubernetes Service Connection'
         kubernetesServiceEndpoint: 'dev-aks'
         namespace: 'abdelha-qa'
-        command: 'upgrade'
+        command: 'install'
         chartType: 'FilePath'
         chartPath: '$(System.ArtifactsDirectory)/drop/helm_chart'
         releaseName: 'first-app'
