Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -160,7 +160,7 @@ stages:
     - task: PublishBuildArtifacts@1
       displayName: Upload Helm Chart
       inputs:
-        PathtoPublish: '03_helm/firstchart'
+        PathtoPublish: '03_helm/ma'
         ArtifactName: 'drop\helm_chart'
         publishLocation: 'Container'
 
