Update 02_azure-pipelines.yaml for Azure Pipelines

--- a/09_azure_pipelines/02_azure-pipelines.yaml
+++ b/09_azure_pipelines/02_azure-pipelines.yaml
@@ -238,7 +238,7 @@ stages:
         chartPath: '$(System.ArtifactsDirectory)/drop/helm_chart'
         releaseName: 'rbacs'
         overrideValues: ' --namespace qa'
-        arguments: '--create-namespace' 
+        arguments: '--create-namespace  --dependency-update ' 
 
   - job: Test
     displayName: 'Integration Tests QA'
