--- a/03_helm/ma/values.yaml
+++ b/03_helm/ma/values.yaml
@@ -5,7 +5,7 @@ imagesPullPolicy: Always
 namespace: rbacs
 
 
-rbaccore:
+rbacalpha:
   enabled: true
   image:
     repository: devavaxiaregistry.azurecr.io/rbaccore
@@ -72,7 +72,7 @@ ingress:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
   host: rbacs.avaxia-dev.avaxia-group.com
   paths: 
-    rbaccore: /api/jrbac/?(.*)
+    rbacalpha: /api/jrbac/?(.*)
 
 mysql:
   enabled: true
