--- a/03_helm/ma/values.yaml
+++ b/03_helm/ma/values.yaml
@@ -2,7 +2,7 @@ nameOverride:
 fullnameOverride: ""
 imagesPullSecret: 
 imagesPullPolicy: Always
-namespace: rbacs
+namespace: abdelhak
 
 
 rbacalpha:
